# albums

./: .gitignore  .markdownlint.yaml  .prettierrc  .pymarkdown.yml  Makefile  README.md  cspell.json  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml
albums/: __main__.py  actions.py  database.py  library.py  synchronizer.py  tags.py
docs/: all_checks.md  changelog.md  check_and_fix.md  developing.md  ideas.md  index.md  sync.md  usage.md  zensical.toml
sample/: config.ini  config.toml
scripts/: lint_markdown.py  pymarkdown.yaml
src/albums/: __init__.py  __main__.py  app.py  checks.py  config.py  configuration.py  context.py  database.py  library.py  selector.py  synchronizer.py  tags.py  tools.py  types.py
src/albums/checks/: all.py  base.py  base_check.py  base_check_tag_per_album.py  base_check_total_tag.py  base_fixer.py  check_album_art.py  check_album_artist.py  check_album_tag.py  check_album_under_album.py  check_artist_tag.py  check_bad_pathname.py  check_cover_art.py  check_cover_dimensions.py  check_cover_embedded.py  check_cover_selection.py  check_disc_in_track_number.py  check_disc_numbering.py  check_disctotal_presence.py  check_duplicate_image.py  check_duplicate_images.py  check_embedded_picture_metadata.py  check_flac_picture_metadata.py  check_front_cover_dimensions.py  check_front_cover_embedded.py  check_front_cover_selection.py  check_invalid_image.py  check_invalid_track_or_disc_number.py  check_required_tags.py  check_single_value_tags.py  check_track_number.py  check_track_numbering.py  check_track_title.py  check_tracktotal_presence.py  check_zero_pad_numbers.py  checker.py  defaults.py  helpers.py  image_table.py  interact.py  (+3 more)
src/albums/cli/: add_to_collections.py  check.py  checks_ignore.py  checks_notice.py  cli_context.py  click_custom.py  collections_add.py  collections_remove.py  collections_select.py  config.py  context.py  entry_point.py  import_album.py  import_command.py  init.py  list_albums.py  ordered_group.py  remove_from_collections.py  scan.py  sql.py  sync.py
src/albums/database/: collections_by_name.py  configuration.py  connection.py  (+8 more)
tests/: create_library.py  helpers.py  pyrightconfig.json  test_app.py  test_check_album_artist.py  test_check_album_tag.py  test_check_album_under_album.py  test_check_fix_interactive.py  test_check_required_tags.py  test_check_single_value_tags.py  test_check_track_number.py  test_checker.py  test_checks.py  test_cli.py  test_cli_config.py  test_configurator.py  test_database.py  test_database_config.py  test_metadata.py  test_picture.py  test_scan.py  test_scanner.py
tests/checks/: test_check_album_art.py  test_check_album_artist.py  test_check_album_tag.py  test_check_album_under_album.py  test_check_artist_tag.py  test_check_bad_pathname.py  test_check_cover_art.py  test_check_cover_dimensions.py  test_check_cover_embedded.py  test_check_cover_selection.py  test_check_disc_in_track_number.py  test_check_disc_numbering.py  test_check_duplicate_image.py  test_check_duplicate_images.py  test_check_embedded_picture_metadata.py  test_check_fix_interactive.py  test_check_flac_picture_metadata.py  test_check_front_cover_dimensions.py  test_check_front_cover_embedded.py  test_check_front_cover_selection.py  test_check_invalid_image.py  test_check_invalid_track_disc_number.py  test_check_required_tags.py  test_check_single_value_tags.py  test_check_total_tags.py  test_check_track_number.py  test_check_track_numbering.py  test_check_track_title.py  test_check_zero_pad_numbers.py  test_total_tags.py
tests/cli/: test_cli.py  test_cli_sync.py  test_folder_context.py
tests/database/: test_database.py  test_database_config.py  test_selector.py
tests/fixtures/: create_library.py  empty_files.py
tests/tagger/: test_aiff.py  test_asf.py  test_flac.py  test_m4a.py  test_mp3.py  test_mp4.py  test_oggvorbis.py  test_picture.py  test_tagger.py
typings/simple_term_menu/: __init__.pyi
(+132 files in other folders)
