[tool.poetry]
name = "albums"
version = "0.1.0"
description = ""
authors = ["Ivan Cooper <ivan@4levity.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.14"
humanize = "^4.15.0"
click = "^8.3.1"
platformdirs = "^4.5.1"
mutagen = "^1.47.0"
simple-term-menu = "^1.6.6"
prettytable = "^3.17.0"
rich = "^14.2.0"
rich-click = "^1.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
eralchemy = {extras = ["graphviz"], version = "^1.6.0"}
pytest-cov = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
albums = "albums.cli.entry_point:albums"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150