[tool.poetry]
name = "albums"
version = "0.1.0"
description = ""
authors = ["Ivan Cooper <ivan@4levity.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
humanize = "^4.15.0"
click = "^8.3.1"
platformdirs = "^4.5.1"
mutagen = "^1.47.0"
simple-term-menu = "^1.6.6"
rich = "^14.2.0"
rich-click = "^1.9.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
eralchemy = {extras = ["graphviz"], version = "^1.6.0"}
pytest-cov = "^7.0.0"
pymarkdownlnt = "^0.9.34"
zensical = "^0.0.18"
pyright = "^1.1.408"


[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
albums = "albums.cli.entry_point:albums"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150
exclude = ["typings"]

[tool.pyright]
ignore = ["tests", "**/typings"]
exclude = [".venv", "**/.*", "**/__*", "**/typings", "**/node_modules", "**/__pycache__"]
typeCheckingMode = "strict"
stubPath = "typings"
pythonPlatform = "Linux"
pythonVersion = "3.12"
